[fix #162115998] Modify layout container z-index

--- a/UI/assets/css/styles.css
+++ b/UI/assets/css/styles.css
@@ -110,7 +110,7 @@ button {
   font-weight: 600;
 }
 
-.form-container {
+.container {
   align-items: center;
   background: #f5f6f8;
   padding: 95px 40px;
@@ -277,6 +277,10 @@ section > .btn {
   background: #ab6b1b;
   color: #fffffa;
   padding: 4px 10px;
+}
+
+.reports-container {
+  z-index: -1;
 }
 
 .report-status::after {
